--- a/app/Resources/views/layouts/generic.html.twig
+++ b/app/Resources/views/layouts/generic.html.twig
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('duti.css') }}"
+    <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('duti.css') }}" />
 {% endblock %}
