Start work on the clock action

--- a/src/Duti/Bundle/Core/Resources/views/Duti/index.html.twig
+++ b/src/Duti/Bundle/Core/Resources/views/Duti/index.html.twig
@@ -33,7 +33,7 @@
                             <td>{{ task.timeSoFar }}</td>
                             <td style="white-space: nowrap">
                                 <ul class="list-inline">
-                                    <li><a href="/"><img src="{{ asset('clock.png') }}" alt="Clock in"</a></li>
+                                    <li><a href="/clock/{{ task.id }}/"><img src="{{ asset('clock.png') }}" alt="Clock in"</a></li>
                                     <li><a href="/"><img src="{{ asset('tick.png') }}" alt="Complete" /></a></li>
                                     <li><a href="/"><img src="{{ asset('cross.png') }}" alt="Delete" /></a></li>
                                 </ul>
